# typed_sql

./: Cargo.toml  README.md
examples/: users.rs  users.sql
src/: code_gen.rs  lib.rs  main.rs  schema.rs  schema_load.rs  test.rs  type_solver.rs
